desktop pre-ready 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 	<!-- Title and SEO -->
-	<title>Стартовый шаблон</title>
+	<title>Автосалон ABC - официальный дилер</title>
 	<meta name="description" content="Описание страницы" />
 	<meta name="keywords" content="ключевые слова, фразы" />
 
@@ -25,19 +25,18 @@
 	<!-- Open Graph -->
 	<!-- <meta property="og:url" content="https://webcademy.ru/" /> -->
 	<meta property="og:type" content="website" />
-	<meta property="og:title" content="Туристическое агентство Форест Тревел" />
+	<meta property="og:title" content="Автосалон ABC - официальный дилер" />
 	<meta property="og:description" content="Турпоходы по дикой природе" />
 	<meta property="og:image" content="./img/opengraph.jpg" />
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
-	<link rel="manifest" href="./img/favicon/site.webmanifest">
-	<link rel="mask-icon" href="./img/favicon/safari-pinned-tab.symbol" color="#1a60cf">
-	<link rel="shortcut icon" href="./img/favicon/favicon.ico">
-	<meta name="msapplication-TileColor" content="#00aba9">
-	<meta name="msapplication-config" content="./img/favicon/browserconfig.xml">
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+	<link rel="manifest" href="./img/favicons/site.webmanifest">
+	<link rel="shortcut icon" href="./img/favicons/favicon.ico">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="msapplication-config" content="./img/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#ffffff">
 </head>
 
@@ -577,8 +576,8 @@
 									</div>
 									<div class="double-range-input__track-wrapper">
 										<div data-name="track" class="double-range-input__track"></div>
-										<input data-name="range-1" type="range" min="0" max="3000000" value="0" step="10000" onInput="slideOne()" />
-										<input data-name="range-2" type="range" min="0" max="3000000" value="3000000" step="10000" onInput="slideTwo()" />
+										<input data-name="range-1" type="range" min="0" max="3000000" value="0" step="10000"/>
+										<input data-name="range-2" type="range" min="0" max="3000000" value="3000000" step="10000"/>
 									</div>
 									<ul class="double-range-input__scale">
 										<li>0</li>
