--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	</div>
 
 	<header class="header">
-		<section class="header-top">
+		<div class="header-top">
 			<div class="container">
 				<div class="header-top__row">
 					<div class="header-top__left-column">
@@ -141,9 +141,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<section class="header-middle">
+		<div class="header-middle">
 			<div class="container">
 				<div class="header-middle__row">
 					<div class="nav-icon">
@@ -181,9 +181,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<section class="header-bottom">
+		<div class="header-bottom">
 			<div class="container">
 				<div class="header-bottom__row">
 					<ul class="header-bottom__menu">
@@ -216,9 +216,9 @@
 					</ul>
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<div class="header-dropdown">
+		<div class="header-dropdown-search">
 			<div class="container">
 				<form class="search-form">
 					<div class="search-form__group">
@@ -233,23 +233,417 @@
 				</form>
 			</div>
 		</div>
+
+		<div class="header-dropdown-mobile-nav">
+			<div class="container">
+				<div class="mobile-menu">
+					<div class="mobile-menu__left-column">
+						<h3 class="mobile-menu__title">Кредит и рассрочка</h3>
+						<ul class="mobile-menu__list">
+							<li><a href="#!">Первый автомобиль</a></li>
+							<li><a href="#!">Семейный автомобиль</a></li>
+							<li><a href="#!">Экспресс-кредит</a></li>
+							<li><a href="#!">Работникам медицины</a></li>
+							<li><a href="#!">Рассрочка</a></li>
+							<li><a href="#!">Госпрограмма Trade-in</a></li>
+						</ul>
+						<h3 class="mobile-menu__title">Спецпредложения</h3>
+						<ul class="mobile-menu__list">
+							<li><a href="#!">Trade-in</a></li>
+							<li><a href="#!">Рассрочка</a></li>
+						</ul>
+						<h3 class="mobile-menu__title">Такси в кредит</h3>
+					</div>
+					<div class="mobile-menu__middle-column">
+						<h3 class="mobile-menu__title">Каталог автомобилей</h3>
+						<ul class="mobile-menu__list mobile-menu__list--brands">
+							<li>
+								<a href="#!">
+									Kia
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Hyundai
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Skoda
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Volkswagen
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Toyota
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Brilliance
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Changan
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Chery
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Chery-Exeed
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Chevrolet
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Citroen
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Datsun
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Dongfeng
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									DW-Hover
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Faw
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Ford
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Foton
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Gac
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Geely
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Great-Wall
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Haima
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Haval
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Honda
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Jac
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Lada
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Lifan
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Mazda
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Mitsubishi
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Nissan
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Opel
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Peugeot
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Ravon
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Renault
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									SsangYoung
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Suzuki
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Uaz
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="mobile-menu__right-column">
+						<h3 class="mobile-menu__title">Авто с пробегом</h3>
+						<ul class="mobile-menu__list mobile-menu__list--brands">
+							<li>
+								<a href="#!">
+									Kia
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Hyundai
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Skoda
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Volkswagen
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Toyota
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Brilliance
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Changan
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Chery
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Chery-Exeed
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Chevrolet
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Citroen
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Datsun
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Dongfeng
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									DW-Hover
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Faw
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Ford
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Foton
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Gac
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Geely
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Great-Wall
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Haima
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Haval
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Honda
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Jac
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Lada
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Lifan
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Mazda
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Mitsubishi
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Nissan
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Opel
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Peugeot
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Ravon
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Renault
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									SsangYoung
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Suzuki
+								</a>
+							</li>
+							<li>
+								<a href="#!">
+									Uaz
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 	</header>
 
 	<main class="main">
-		<section class="slider">
+		<section class="section-slider">
 			<div class="bg-wrapper">
-				<div class="slider__bg">
+				<div class="section-slider__bg">
 					<div class="container">
-						<div class="slider__content">
-							<div class="slider__badge">
+						<div class="section-slider__content">
+							<div class="section-slider__badge">
 								<div class="badge-round">Осталось всего 10 авто!</div>
 							</div>
-							<div class="slider__title">
+							<div class="section-slider__title">
 								<h1 class="h1">
 									Грандиозная распродажа тестового парка!
 								</h1>
 							</div>
-							<div class="slider__subtitle">
+							<div class="section-slider__subtitle">
 								Узнай свою цену!
 							</div>
 						</div>
@@ -576,8 +970,8 @@
 									</div>
 									<div class="double-range-input__track-wrapper">
 										<div data-name="track" class="double-range-input__track"></div>
-										<input data-name="range-1" type="range" min="0" max="3000000" value="0" step="10000"/>
-										<input data-name="range-2" type="range" min="0" max="3000000" value="3000000" step="10000"/>
+										<input data-name="range-1" type="range" min="0" max="3000000" value="0" step="10000" />
+										<input data-name="range-2" type="range" min="0" max="3000000" value="3000000" step="10000" />
 									</div>
 									<ul class="double-range-input__scale">
 										<li>0</li>
@@ -1889,7 +2283,7 @@
 	</main>
 
 	<footer class="footer">
-		<section class="footer-top">
+		<div class="footer-top">
 			<div class="bg-wrapper">
 				<div class="footer-top__bg">
 					<div class="container">
@@ -1903,9 +2297,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<section class="footer-middle">
+		<div class="footer-middle">
 			<div class="bg-wrapper">
 				<div class="footer-middle__bg">
 					<div class="container">
@@ -2154,9 +2548,9 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<section class="footer-bottom">
+		<div class="footer-bottom">
 			<div class="bg-wrapper">
 				<div class="footer-bottom__bg">
 					<div class="container">
@@ -2178,7 +2572,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
 	</footer>
 
 	<!-- jQuery lib -->
