--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 		<symbol id="icon-header-phone" viewBox="0 0 31 31">
 			<path d="M23.6889 19.7226L21.9151 18.54L20.3383 17.489C20.034 17.2865 19.625 17.3529 19.4004 17.6412L18.4247 18.8956C18.2151 19.1677 17.838 19.246 17.5375 19.0796C16.8754 18.7113 16.0925 18.3645 14.3651 16.6349C12.6377 14.9053 12.2887 14.1246 11.9204 13.4625C11.754 13.162 11.8323 12.7849 12.1044 12.5754L13.3588 11.5997C13.6471 11.375 13.7135 10.9661 13.5111 10.6617L12.4923 9.13348L11.2774 7.31112C11.0706 7.00094 10.6567 6.90781 10.337 7.09953L8.93591 7.94008C8.55726 8.16318 8.27892 8.52342 8.15855 8.94614C7.77539 10.3431 7.69814 13.4247 12.6368 18.3634C17.5755 23.3021 20.6569 23.2246 22.0538 22.8414C22.4766 22.7211 22.8368 22.4427 23.0599 22.0641L23.9004 20.663C24.0922 20.3433 23.9991 19.9294 23.6889 19.7226Z" />
 		</symbol>
+		<symbol id="icon-header-mobile-phone" width="12" height="13" viewBox="0 0 12 13">
+			<path d="M11.1657 10.0099L9.90331 9.17078L8.78109 8.42499C8.56451 8.28132 8.27346 8.32842 8.11357 8.53304L7.41916 9.4231C7.27 9.61624 7.00167 9.67174 6.78777 9.55366C6.31659 9.29234 5.7594 9.04629 4.53001 7.81896C3.30061 6.59164 3.05226 6.03768 2.79016 5.56789C2.67173 5.35462 2.72739 5.08709 2.92111 4.93839L3.81381 4.24604C4.01902 4.08665 4.06628 3.79645 3.92218 3.5805L3.19715 2.49606L2.33252 1.20295C2.18536 0.982843 1.89076 0.916764 1.66324 1.0528L0.666083 1.64925C0.396599 1.80755 0.198505 2.06318 0.112836 2.36313C-0.159851 3.35439 -0.214829 5.54106 3.30001 9.04549C6.81485 12.5499 9.00783 12.4949 10.002 12.223C10.3029 12.1376 10.5593 11.9401 10.718 11.6714L11.3162 10.6772C11.4527 10.4504 11.3864 10.1567 11.1657 10.0099Z" />
+		</symbol>
 		<symbol id="icon-favourite" viewBox="0 0 26 23">
 			<path d="M2.7752 11.5622L13 22L23.2248 11.5622C24.3614 10.4019 25 8.82813 25 7.18718C25 3.7701 22.2864 1 18.9391 1C17.3316 1 15.79 1.65186 14.6534 2.81218L13 4.5L11.3466 2.81218C10.21 1.65186 8.66837 1 7.06092 1C3.71356 1 1 3.7701 1 7.18718C1 8.82813 1.63856 10.4019 2.7752 11.5622Z" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
 		</symbol>
@@ -110,11 +113,11 @@
 		</div>
 	</div>
 
-	<header class="header">
+	<header class="header ">
 		<div class="header-top">
 			<div class="container">
 				<div class="header-top__row">
-					<div class="header-top__left-column">
+					<div class="header-top__left">
 						<div class="header-top__adress">
 							<span>
 								<svg width="15" height="17">
@@ -131,8 +134,11 @@
 							</span>
 							Время работы: c 08:00 до 21:00
 						</div>
+						<div class="header-top__phone">
+							+7 (800) 551-94-31
+						</div>
 					</div>
-					<div class="header-top__right-column">
+					<div class="header-top__right">
 						<div class="header-top__whatsapp">
 							<span>
 								<svg width="20" height="20">
@@ -140,6 +146,14 @@
 								</svg>
 							</span>
 							Whatsapp
+						</div>
+						<div class="header-top__callback">
+							<span>
+								<svg width="12" height="13">
+									<use href="#icon-header-mobile-phone"></use>
+								</svg>
+							</span>
+							Обратный звонок
 						</div>
 					</div>
 				</div>
@@ -636,8 +650,8 @@
 		</div>
 	</header>
 
-	<main class="main">
-		<section class="section-slider">
+	<main class="main ">
+		<section class="section-slider ">
 			<div class="bg-wrapper">
 				<div class="section-slider__bg">
 					<div class="container">
@@ -964,7 +978,7 @@
 			</div>
 		</section>
 
-		<section class="section-select">
+		<section class="section-select ">
 			<div class="container">
 				<div class="section-select__bg">
 					<div class="section-select__row">
@@ -1332,7 +1346,7 @@
 			</div>
 		</section>
 
-		<section class="section-stock">
+		<section class="section-stock ">
 			<div class="container">
 				<div class="section-stock__title">
 					<h2 class="h2">Автомобили в наличии с ПТС</h2>
@@ -1363,7 +1377,7 @@
 									</svg>
 									<span>Предложение дня</span>
 								</div>
-								<div class="auto-card__badge-notice">Выгода до 300 000 ₽</div>
+								<div class="auto-card__badge-notice">Выгода до&nbsp;300 000 ₽</div>
 							</div>
 						</div>
 						<ul class="auto-card__bonus-list">
@@ -1440,85 +1454,7 @@
 									</svg>
 									<span>Предложение дня</span>
 								</div>
-								<div class="auto-card__badge-notice">Выгода до 300 000 ₽</div>
-							</div>
-						</div>
-						<ul class="auto-card__bonus-list">
-							<li>Оборудование <span>в подарок</span> </li>
-							<li>КАСКО <span>в подарок</span> </li>
-							<li>Комплект резины <span>в подарок</span> </li>
-						</ul>
-						<div class="auto-card__price-row">
-							<div class="auto-card__price">от 1 615 000 ₽</div>
-							<div class="auto-card__loan">Кредит <b>от&nbsp;115&nbsp;000&nbsp;₽/мес.</b></div>
-						</div>
-
-						<ul class="auto-card__params">
-							<li>
-								<img src="./img/section-stock/power.svg" alt="power-icon">
-								115 л.с.
-							</li>
-							<li>
-								<img src="./img/section-stock/fuel.svg" alt="power-icon">
-								5.3 л/км
-							</li>
-							<li>
-								<img src="./img/section-stock/speed.svg" alt="power-icon">
-								189 км/ч
-							</li>
-							<li>
-								<img src="./img/section-stock/acceleration.svg" alt="power-icon">
-								10,3 c.
-							</li>
-						</ul>
-						<div class="auto-card__buttons-row">
-							<button class="auto-card__button red" type="button">
-								<svg class="auto-card-btn-red" width="18" height="50">
-									<use href="#auto-card-btn-arrow"></use>
-								</svg>
-								<span>Резерв онлайн</span>
-							</button>
-							<button class="auto-card__button black" type="button">
-								<svg class="auto-card-btn-black" width="18" height="50">
-									<use href="#auto-card-btn-arrow"></use>
-								</svg>
-								<span>Купить</span>
-							</button>
-							<button class="auto-card__button gray" type="button">
-								<svg class="auto-card-btn-gray" width="18" height="50">
-									<use href="#auto-card-btn-arrow"></use>
-								</svg>
-								<span>Подробнее</span>
-							</button>
-						</div>
-					</div>
-					<!-- //auto-card -->
-					<!-- auto-card -->
-					<div class="auto-card">
-						<div class="auto-card__content">
-							<div class="auto-card__title-row">
-								<div class="auto-card__title">Skoda Octavia <span>1.6 MPI MT Active</span></div>
-								<ul class="auto-card__icons">
-									<li>
-										<svg class="icon-favourite" width="26" height="23">
-											<use href="#icon-favourite"></use>
-										</svg>
-									</li>
-									<li>
-										<svg class="icon-compare" width="19" height="23">
-											<use href="#icon-compare"></use>
-										</svg>
-									</li>
-								</ul>
-							</div>
-							<div class="auto-card__badge-row">
-								<div class="auto-card__badge">
-									<svg width="10" height="28">
-										<use href="#auto-card-btn-arrow"></use>
-									</svg>
-									<span>Предложение дня</span>
-								</div>
-								<div class="auto-card__badge-notice">Выгода до 300 000 ₽</div>
+								<div class="auto-card__badge-notice">Выгода до&nbsp;300 000 ₽</div>
 							</div>
 						</div>
 						<ul class="auto-card__bonus-list">
@@ -1596,7 +1532,7 @@
 									</svg>
 									<span>Предложение дня</span>
 								</div>
-								<div class="auto-card__badge-notice">Выгода до 300 000 ₽</div>
+								<div class="auto-card__badge-notice">Выгода до&nbsp;300 000 ₽</div>
 							</div>
 						</div>
 						<ul class="auto-card__bonus-list">
@@ -1674,7 +1610,7 @@
 									</svg>
 									<span>Предложение дня</span>
 								</div>
-								<div class="auto-card__badge-notice">Выгода до 300 000 ₽</div>
+								<div class="auto-card__badge-notice">Выгода до&nbsp;300 000 ₽</div>
 							</div>
 						</div>
 						<ul class="auto-card__bonus-list">
@@ -1752,7 +1688,85 @@
 									</svg>
 									<span>Предложение дня</span>
 								</div>
-								<div class="auto-card__badge-notice">Выгода до 300 000 ₽</div>
+								<div class="auto-card__badge-notice">Выгода до&nbsp;300 000 ₽</div>
+							</div>
+						</div>
+						<ul class="auto-card__bonus-list">
+							<li>Оборудование <span>в подарок</span> </li>
+							<li>КАСКО <span>в подарок</span> </li>
+							<li>Комплект резины <span>в подарок</span> </li>
+						</ul>
+						<div class="auto-card__price-row">
+							<div class="auto-card__price">от 1 615 000 ₽</div>
+							<div class="auto-card__loan">Кредит <b>от&nbsp;115&nbsp;000&nbsp;₽/мес.</b></div>
+						</div>
+
+						<ul class="auto-card__params">
+							<li>
+								<img src="./img/section-stock/power.svg" alt="power-icon">
+								115 л.с.
+							</li>
+							<li>
+								<img src="./img/section-stock/fuel.svg" alt="power-icon">
+								5.3 л/км
+							</li>
+							<li>
+								<img src="./img/section-stock/speed.svg" alt="power-icon">
+								189 км/ч
+							</li>
+							<li>
+								<img src="./img/section-stock/acceleration.svg" alt="power-icon">
+								10,3 c.
+							</li>
+						</ul>
+						<div class="auto-card__buttons-row">
+							<button class="auto-card__button red" type="button">
+								<svg class="auto-card-btn-red" width="18" height="50">
+									<use href="#auto-card-btn-arrow"></use>
+								</svg>
+								<span>Резерв онлайн</span>
+							</button>
+							<button class="auto-card__button black" type="button">
+								<svg class="auto-card-btn-black" width="18" height="50">
+									<use href="#auto-card-btn-arrow"></use>
+								</svg>
+								<span>Купить</span>
+							</button>
+							<button class="auto-card__button gray" type="button">
+								<svg class="auto-card-btn-gray" width="18" height="50">
+									<use href="#auto-card-btn-arrow"></use>
+								</svg>
+								<span>Подробнее</span>
+							</button>
+						</div>
+					</div>
+					<!-- //auto-card -->
+					<!-- auto-card -->
+					<div class="auto-card">
+						<div class="auto-card__content">
+							<div class="auto-card__title-row">
+								<div class="auto-card__title">Skoda Octavia <span>1.6 MPI MT Active</span></div>
+								<ul class="auto-card__icons">
+									<li>
+										<svg class="icon-favourite" width="26" height="23">
+											<use href="#icon-favourite"></use>
+										</svg>
+									</li>
+									<li>
+										<svg class="icon-compare" width="19" height="23">
+											<use href="#icon-compare"></use>
+										</svg>
+									</li>
+								</ul>
+							</div>
+							<div class="auto-card__badge-row">
+								<div class="auto-card__badge">
+									<svg width="10" height="28">
+										<use href="#auto-card-btn-arrow"></use>
+									</svg>
+									<span>Предложение дня</span>
+								</div>
+								<div class="auto-card__badge-notice">Выгода до&nbsp;300 000 ₽</div>
 							</div>
 						</div>
 						<ul class="auto-card__bonus-list">
@@ -1812,7 +1826,7 @@
 			</div>
 		</section>
 
-		<section class="section-collections">
+		<section class="section-collections ">
 			<div class="container">
 				<div class="section-collections__title">
 					<h2 class="h2">Наши подборки</h2>
@@ -1868,7 +1882,7 @@
 			</div>
 		</section>
 
-		<section class="section-cta">
+		<section class="section-cta ">
 			<div class="container">
 				<div class="section-cta__bg">
 					<form class="cta-form">
@@ -1888,7 +1902,7 @@
 			</div>
 		</section>
 
-		<section class="section-offers">
+		<section class="section-offers ">
 			<div class="container">
 				<div class="section-offers__title">
 					<h2 class="h2">Спецпредложения</h2>
@@ -1910,7 +1924,7 @@
 										1,9% по льготной ставке
 									</div>
 									<div class="offer-card__button">
-										<button class="button h40 bg-gray" type="button">Узнать больше</button>
+										<button class="button h40 p20 bg-gray" type="button">Узнать больше</button>
 									</div>
 								</div>
 							</div>
@@ -1928,7 +1942,7 @@
 										1,9% по льготной ставке
 									</div>
 									<div class="offer-card__button">
-										<button class="button h40 bg-gray" type="button">Узнать больше</button>
+										<button class="button h40 p20 bg-gray" type="button">Узнать больше</button>
 									</div>
 								</div>
 							</div>
@@ -1946,7 +1960,7 @@
 										1,9% по льготной ставке
 									</div>
 									<div class="offer-card__button">
-										<button class="button h40 bg-gray" type="button">Узнать больше</button>
+										<button class="button h40 p20 bg-gray" type="button">Узнать больше</button>
 									</div>
 								</div>
 							</div>
@@ -1970,7 +1984,7 @@
 			</div>
 		</section>
 
-		<section class="section-credit">
+		<section class="section-credit ">
 			<div class="bg-wrapper">
 				<div class="section-credit__bg">
 					<div class="container">
@@ -2118,7 +2132,7 @@
 			</div>
 		</section>
 
-		<section class="section-banks">
+		<section class="section-banks ">
 			<div class="container">
 				<div class="section-banks__title">
 					<h2 class="h2">Банки-партнеры</h2>
@@ -2161,7 +2175,7 @@
 			</div>
 		</section>
 
-		<section class="section-ratings">
+		<section class="section-ratings ">
 			<div class="container">
 				<div class="section-ratings__title">
 					<h2 class="h2">Нам доверяют</h2>
@@ -2349,7 +2363,7 @@
 			</div>
 		</section>
 
-		<section class="section-reviews">
+		<section class="section-reviews ">
 			<div class="container">
 				<div class="section-reviews__title">
 					<h2 class="h2">Отзывы</h2>
@@ -2437,7 +2451,7 @@
 			</div>
 		</section>
 
-		<section class="section-about">
+		<section class="section-about ">
 			<div class="container">
 				<div class="section-about__title">
 					<h2 class="h2">О компании</h2>
@@ -2456,7 +2470,7 @@
 			</div>
 		</section>
 
-		<section class="section-blog">
+		<section class="section-blog ">
 			<div class="container">
 				<div class="section-blog__title">
 					<h2 class="h2">Блог</h2>
@@ -2537,7 +2551,7 @@
 			</div>
 		</section>
 
-		<section class="section-tabs">
+		<section class="section-tabs ">
 			<div class="container">
 				<ul class="section-tabs__list">
 					<li class="active" data-tab="tab-1">Автосалон</li>
@@ -2551,7 +2565,7 @@
 					</div>
 					<div class="section-tabs__item-text">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar auctor tellus, id volutpat dui dictum vitae. Sed ac mauris nisi. Maecenas quis sollicitudin dolor, eget molestie dolor. Vivamus sed magna euismod, iaculis eros vitae, vehicula justo. Ut id consequat risus, vitae accumsan ligula. Proin egestas odio sit amet laoreet vulputate. Suspendisse vitae vestibulum quam. Vivamus lectus justo, bibendum at laoreet vel, rhoncus nec sem. Phasellus at mollis magna, in bibendum massa. Praesent malesuada sit amet nibh ut vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla iaculis a orci sit amet iaculis. Nulla in magna posuere nunc pharetra faucibus. Phasellus id enim libero.
+							Recusandae assumenda excepturi dolorem ullam quaerat incidunt fuga vitae quas delectus repellat, eaque magnam aperiam expedita quis quibusdam nulla veniam harum ipsum a pariatur eos nisi et. Et, perspiciatis error? Eaque, ullam? Autem nulla totam necessitatibus ullam. Repellendus iure dolore error minus perferendis cupiditate sit ea praesentium, voluptates odit accusamus quidem in nostrum voluptate reiciendis neque tempore architecto nemo. Assumenda! Impedit necessitatibus ullam blanditiis sint soluta repellat esse reprehenderit alias possimus repellendus dolores accusamus velit facere at similique quia, commodi totam quasi! Nesciunt ab sequi dolores ipsum animi dicta blanditiis?
 						</p>
 					</div>
 				</div>
@@ -2575,7 +2589,11 @@
 					</div>
 					<div class="section-tabs__item-text">
 						<p>
-							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pulvinar auctor tellus, id volutpat dui dictum vitae. Sed ac mauris nisi. Maecenas quis sollicitudin dolor, eget molestie dolor. Vivamus sed magna euismod, iaculis eros vitae, vehicula justo. Ut id consequat risus, vitae accumsan ligula. Proin egestas odio sit amet laoreet vulputate. Suspendisse vitae vestibulum quam. Vivamus lectus justo, bibendum at laoreet vel, rhoncus nec sem. Phasellus at mollis magna, in bibendum massa. Praesent malesuada sit amet nibh ut vestibulum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla iaculis a orci sit amet iaculis. Nulla in magna posuere nunc pharetra faucibus. Phasellus id enim libero.
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore suscipit cum nisi doloremque soluta repellat natus maiores enim reprehenderit, at tempore veniam voluptatem quasi neque corporis accusamus blanditiis voluptas iste!
+						</p>
+						<p>
+							Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id nostrum optio ipsam dolore eius quis quidem. Culpa quae animi odio numquam magnam eaque, facere, quod sapiente voluptatem impedit rem nam?
+							Fugit velit impedit corporis mollitia, soluta odio optio, esse quos aliquam architecto nihil provident error? Ut, autem aliquid, ab placeat nemo magni distinctio suscipit ad sit, sed fuga maxime beatae. Magni nostrum magnam repellendus quisquam accusamus maiores ea laudantium tempore quo? Laboriosam sequi quidem perferendis eius, amet nam corrupti dolore sint reprehenderit ea accusantium, quas assumenda cupiditate praesentium ipsam excepturi.
 						</p>
 					</div>
 				</div>
@@ -2583,10 +2601,12 @@
 			</div>
 		</section>
 
-		<section class="section-map">
+		<section class="section-map ">
 			<div class="bg-wrapper">
-				<div id="map">
-					<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A53a64ead64792b31aa8898329836eec02b9754ab90d26c7d0866e175bdeda183&amp;source=constructor" width="1870" height="570" frameborder="0"></iframe>
+				<div class="map">
+					<div class="map__frame">
+						<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A53a64ead64792b31aa8898329836eec02b9754ab90d26c7d0866e175bdeda183&amp;source=constructor" width="1870" height="570" frameborder="0"></iframe>
+					</div>
 					<div class="map-info">
 						<ul class="map-info__content">
 							<li>
@@ -2623,7 +2643,7 @@
 		</section>
 	</main>
 
-	<footer class="footer">
+	<footer class="footer ">
 		<div class="footer-top">
 			<div class="bg-wrapper">
 				<div class="footer-top__bg">
@@ -2735,11 +2755,11 @@
 											Foton
 										</a>
 									</li>
-									<li>
+									<!-- <li>
 										<a href="#!">
 											Gac
 										</a>
-									</li>
+									</li> -->
 									<li>
 										<a href="#!">
 											Geely
@@ -2828,7 +2848,12 @@
 									</li>
 									<li>
 										<a href="#!">
-											Uaz
+											UAZ
+										</a>
+									</li>
+									<li>
+										<a href="#!">
+											Zotye
 										</a>
 									</li>
 								</ul>
@@ -2873,7 +2898,7 @@
 												<use href="#icon-adress"></use>
 											</svg>
 										</div>
-										Россия, Москва, 38КМ МКАД, 6Бс1
+										Россия, Москва, 38КМ МКАД, 6Бс1<br>Схема проезда
 									</li>
 								</ul>
 								<div class="dropdown">
@@ -2907,7 +2932,7 @@
 								Обращаем Ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями Статьи 437 Гражданского кодекса Российской Федерации.
 							</div>
 							<div class="footer-bottom__image">
-								<img src="./img/footer/footer-bottom/yandex.jpg" alt="yandex">
+								<img src="./img/footer/footer-bottom/yandex.png" alt="yandex">
 							</div>
 						</div>
 					</div>
