--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 		</div>
 	</div>
 
-	<header class="header ">
+	<header class="header">
 		<div class="header-top">
 			<div class="container">
 				<div class="header-top__row">
@@ -244,7 +244,7 @@
 								<div class="badge-round small">12</div>
 							</li>
 							<li>
-								<button type="button" id="search-button">
+								<button type="button" class="search-button">
 									<svg class="icon-search" width="14" height="14">
 										<use href="#icon-search"></use>
 									</svg>
@@ -280,7 +280,7 @@
 							<div class="badge-round small">12</div>
 						</li>
 						<li>
-							<button type="button" id="search-button">
+							<button type="button" class="search-button">
 								<svg class="icon-search" width="23" height="23">
 									<use href="#icon-search"></use>
 								</svg>
@@ -2991,7 +2991,7 @@
 												<use href="#icon-adress"></use>
 											</svg>
 										</div>
-										Россия, Москва, 38КМ МКАД, 6Бс1<br>Схема проезда
+										Россия, Москва, 38КМ&nbsp;МКАД,&nbsp;6Бс1<br>Схема проезда
 									</li>
 								</ul>
 								<div class="dropdown">
