--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- Title and SEO -->
-	<title>Автосалон ABC - официальный дилер</title>
-	<meta name="description" content="Описание страницы">
-	<meta name="keywords" content="ключевые слова, фразы">
+	<title>Автосалон ABC - официальный дилер Hyundai, KIA, Geely, Mazda, Suzuki, Peugeot, UAZ.</title>
+	<meta name="description" content="Официальный сайт дилера Hyundai, KIA, Geely, Mazda, Suzuki, Peugeot, Haval, UAZ. Аларм-Моторс предлагает новые автомобили, авто с пробегом, официальный сервис и продажу запчастей.">
+	<meta name="keywords" content="Hyundai, KIA, Geely, Mazda, Suzuki, Peugeot, UAZ">
 
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,10 +23,10 @@
 	<link rel="stylesheet" href="./css/main.css">
 
 	<!-- Open Graph -->
-	<!-- <meta property="og:url" content="https://webcademy.ru/" > -->
+	<meta property="og:url" content="http://rightcode.pro/portfolio/abc-auto/index.html" >
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="Автосалон ABC - официальный дилер.">
-	<meta property="og:description" content="Турпоходы по дикой природе">
+	<meta property="og:title" content="Автосалон ABC - официальный дилер Hyundai, KIA, Geely, Mazda, Suzuki, Peugeot, UAZ.">
+	<meta property="og:description" content="Официальный сайт дилера Hyundai, KIA, Geely, Mazda, Suzuki, Peugeot, Haval, UAZ. Аларм-Моторс предлагает новые автомобили, авто с пробегом, официальный сервис и продажу запчастей.">
 	<meta property="og:image" content="./img/opengraph.jpg">
 
 	<!-- Favicons -->
